manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: docker.io/digilinq/api-gateway
          ports:
            - containerPort: 8080
              name: service
            - containerPort: 8081
              name: management
