manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    svc: api-gateway
spec:
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: service
      protocol: TCP
      port: 8080
      targetPort: service
    - name: management
      port: 8081
      protocol: TCP
      targetPort: management
  type: ClusterIP
